finishing gradle and stating maven

--- a/Formação Java/Aula 3/03-TaskTypes/app/build.gradle
+++ b/Formação Java/Aula 3/03-TaskTypes/app/build.gradle
@@ -26,11 +26,20 @@ dependencies {
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(20)
     }
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'org.example.App'
+}
+
+task deleteBuild (type: Delete){
+    delete 'build'
+}
+
+task copyBuild (type: Copy){
+    from 'build'
+    into '../Release'
 }
