--- a/Formação Java/desafio-academia-digital/desafio-academia-digital/src/main/resources/application.yml
+++ b/Formação Java/desafio-academia-digital/desafio-academia-digital/src/main/resources/application.yml
@@ -1,1 +1,17 @@
-spring.application.name=desafio-academia-digital
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/academia
+    username: postgres
+    password: 325158
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate.format_sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
